examples/test/testpolicy10383.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10383
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key25: value6
      key26: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value21
      podSelector:
        matchLabels:
          key25: value47
          key2: value13
          key12: value23
